tests/type-errors/expr_effect_option_ne.arl
archetype expr_effect_option_ne

entry exec () {
  effect {
    var a : option<string> = none;
    var b : option<string> = none;
    dorequire (a <> b)
  }
}
